# NexusFi

./: .env.example  .gitignore  .gitleaks.toml  .npmrc  .yarnrc  AGENTS.md  README.md  mise.toml  package.json  pnpm-lock.yaml  test-app.mjs  tsconfig.base.json  vercel.json
apps/backend/: .env.example  .eslintrc.json  package.json
apps/backend/scripts/: fund-wallet.ts  seed-testnet-xlm.ts  seed-testnet.ts
apps/backend/src/: index.ts
apps/backend/src/lib/: validate-env.ts
apps/backend/src/middleware/: auth.ts
apps/backend/src/routes/: auth.ts  bridge.ts  cre.ts  credit.ts  deposit.ts  passkey.ts  wallet.ts
apps/backend/src/services/: bridge.ts  cre-bridge.ts  moonpay.ts  soroban.ts  stellar.ts  tokens.ts
apps/frontend/: .env.example  next.config.js  package-lock.json  package.json  railway.toml  stellar-sdk-config-stub.js  tailwind.config.ts  tsconfig.json
apps/frontend/public/: sw.js
apps/frontend/src/app/: error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx
apps/frontend/src/components/: AssetList.tsx  BalanceCard.tsx  (+8 more)
contracts/: Cargo.toml  README.md
contracts/credit_line/: Cargo.toml
contracts/credit_line/src/: lib.rs
contracts/credit_score/: Cargo.toml
contracts/credit_score/src/: lib.rs
contracts/evm/: .env.example  README.md  foundry.toml
contracts/evm/script/: Deploy.s.sol
contracts/evm/src/: CreditScoreAttestation.sol  PrivacyCreditCheck.sol  ReserveAttestation.sol  RiskReport.sol
contracts/evm/test/: ReserveAttestation.t.sol
contracts/nexusfi_token/: Cargo.toml
contracts/nexusfi_token/src/: lib.rs  storage.rs  test.rs
docs/: api.md  architecture.md  deployment.md  stellar-testnet.md
nexusfi/NexusFi/: workflow.yaml
scripts/: pre-commit-secrets.sh
workflows/: README.md
workflows/cre/: .cre_build_tmp.js  .env.example  .gitignore  README.md  config.production.json  config.staging.json  main.ts  package-lock.json  package.json  project.yaml  secrets.yaml.example  tmp.js  tmp.wasm  workflow.yaml
(+18 files in other folders)
