[package]
name = "credit_line"
version = "0.1.0"
edition = "2021"
description = "NexusFi Credit Line contract — decentralized credit card logic"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
