[package]
name = "credit_score"
version = "0.1.0"
edition = "2021"
description = "NexusFi AI Credit Score contract — stores CRE-verified scores on-chain"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
