[package]
name = "nexusfi_token"
version = "0.1.0"
edition = "2021"
description = "NexusFi nUSD stablecoin — SEP-41 compatible token on Soroban"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
